Fixes color contrast on links and buttons.

--- a/assets/css/_sass/_components/link-button.scss
+++ b/assets/css/_sass/_components/link-button.scss
@@ -18,7 +18,7 @@
 		line-height: 1;
 		text-decoration: none;
 		text-transform: uppercase;
-		color: cyan;
+		color: rgb(16,131,145);
 		border: 2px solid cyan;
 		&:hover, &:focus {
 			background-color: transparent;
